# CacheBrowns

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  README.md  SUPPORT.md
.github/workflows/: rust.yml
docs/: project-proposal.md
inc/: ICacheReplacementStrategy.h  ICacheStoreStrategy.h  IManagedCache.h  ManagedCache.h  NoReplacement.h  PollingCacheHydrator.h  PullCacheHydrator.h  PurgableCache.h
inc/DataSource/: ICacheDataSource.h  IRetrievable.h
inc/Hydration/: ICacheHydrationStrategy.h  PollingCacheHydrator.h  PullCacheHydrator.h
inc/Lib/: EventuallyConsistentSharedState.h  LockedPointer.h  PollingTask.h
inc/Replacement/: ICacheReplacementStrategy.h  LeastRecentlyUsed.h  NoReplacement.h
inc/Store/: DiscreteFileCacheStore.h  DiscreteFileCacheStore_NonVolatile.h  DiscreteFileCacheStore_Volatile.h  ICacheStoreStrategy.h  IHydratable.h  IKeyTrackingStore.h  IPrunable.h  MemoryCacheStore.h  StoreDataKeyTracker.h  StoreDataValidOverider.h
inc/Sync/: EventuallyConsistentSharedState.h  Polling.h
lib/: LockedPointer.h  LockedPointerTests.cpp  PollingTask.h  PollingTaskTests.cpp
src/: data_source.rs  hydration.rs  lib.rs  managed_cache.rs  source_of_record.rs  store.rs
src/CacheBrownsTests/: CrpDataSource.cpp  CrpDataSource.h  VdcDataSource.cpp  VdcDataSource.h  test.cpp
src/LibTests/: LockedPointerTests.cpp  PollingTaskTests.cpp  TestMain.cpp
src/hydration/: polling.rs  pull.rs
src/store/: discrete_files.rs  memory.rs
src/store/replacement/: lru.rs
