[package]
name = "cache_browns"
version = "0.1.0"
edition = "2021"
authors = ["chhenk@microsoft.com"]

[dependencies]
openssl = "0.10.49"
tracing = "0.1.37"
serde = { version =  "1.0.133",  features = ["derive"] }
serde_json = "1.0.74"
hex = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
chrono = { version = "^0.4.13", features= ["serde"] }
http = "0.2.9"
httpdate = "1.0.2"

[dev-dependencies]
mockall = "0.11.2"
