[package]
name = "cache_browns"
version = "0.0.1-poc.0"
edition = "2021"
authors = ["Chris Henk <chhenk@microsoft.com>"]

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["std"] }
bincode = "1.3.3"
uuid = { version = "1.3.3", features = ["v4"] }
interruptible_polling = "0.1.0"
